--- a/booking_service_01/pom.xml
+++ b/booking_service_01/pom.xml
@@ -15,6 +15,8 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
+		<org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
+		<org.projectlombok.version>1.18.12</org.projectlombok.version>
 	</properties>
 	
 	<dependencies>
@@ -50,67 +52,72 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-
+		<!-- mapstruct -->
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct</artifactId>
+			<version>${org.mapstruct.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
+			<version>${org.projectlombok.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+			<exclusions>
+				<!-- test 를  위한 junit-->
+				<exclusion>
+				  <groupId>org.junit.vintage</groupId>
+				  <artifactId>junit-vintage-engine</artifactId>
+				</exclusion>
+			  </exclusions>
 		</dependency>
-		<!-- mapstruct -->
-		<dependency>
-			<groupId>org.mapstruct</groupId>
-			<artifactId>mapstruct</artifactId>
-			<version>1.4.2.Final</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.umlg/sqlg-postgres-dialect -->
+		
+		<!-- https://mvnrepository.com/artifact/org.umlg/sqlg-postgres-dialect
 		<dependency>
 			<groupId>org.umlg</groupId>
 			<artifactId>sqlg-postgres-dialect</artifactId>
 			<version>2.1.4</version>
-		</dependency>
-
-
+		</dependency> -->
 	</dependencies>
 
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-			  	<groupId>org.apache.maven.plugins</groupId>
-			  	<artifactId>maven-compiler-plugin</artifactId>
-			  	<version>3.5.1</version>
-			  	<configuration>
-					<!-- mapstruct -->
-					<source>11</source>
-					<target>11</target>
-					<annotationProcessorPaths>
-						<path>
-							<groupId>org.mapstruct</groupId>
-							<artifactId>mapstruct-processor</artifactId>
-							<version>1.4.2.Final</version>
-						</path>
-						<path>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-							<version>1.18.22</version>
-						  </path>
-					</annotationProcessorPaths>				
-					<compilerArgs>
-						<compilerArg>
-							-Amapstruct.defaultComponentModel=spring
-						</compilerArg>
-					</compilerArgs>
-				</configuration>
-			</plugin>
+		  <plugin>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-maven-plugin</artifactId>
+		  </plugin>
+		  <plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<version>3.5.1</version>
+			<configuration>
+			  <source>11</source>
+			  <target>11</target>
+			  <annotationProcessorPaths>
+				<path>
+				  <groupId>org.mapstruct</groupId>
+				  <artifactId>mapstruct-processor</artifactId>
+				  <version>${org.mapstruct.version}</version>
+				</path>
+				<path>
+				  <groupId>org.projectlombok</groupId>
+				  <artifactId>lombok</artifactId>
+				  <version>${org.projectlombok.version}</version>
+				</path>
+			  </annotationProcessorPaths>
+			  <compilerArgs>
+				<compilerArg>
+					-Amapstruct.defaultComponentModel=spring
+				</compilerArg>
+			  </compilerArgs>
+			</configuration>
+		  </plugin>
 		</plugins>
-	</build>
+	  </build>
 
 </project>
