mapstruct test not yet

--- a/booking_service_01/src/main/resources/application.properties
+++ b/booking_service_01/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port = 8000
 
 # JPA Settings
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true #콘솔에 SQL을 보기 좋게 띄울 것>인지
 spring.jpa.properties.hibernate.show-sql=true #콘솔에 SQL을 띄울 것인지
 spring.jpa.properties.hibernate.use_sql_comments=false
