--- a/booking_service_01/pom.xml
+++ b/booking_service_01/pom.xml
@@ -25,6 +25,10 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency> 
@@ -39,19 +43,6 @@
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 		
-		<!-- h2 -->
-		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
-		  </dependency>
-
-		<!-- postgreSQL -->
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<scope>runtime</scope>
-		</dependency>
 		<!-- mapstruct -->
 		<dependency>
 			<groupId>org.mapstruct</groupId>
@@ -64,6 +55,21 @@
 			<optional>true</optional>
 			<version>${org.projectlombok.version}</version>
 		</dependency>
+
+		<!-- h2 -->
+		<!-- <dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		  </dependency> -->
+
+		<!-- postgreSQL -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -76,13 +82,6 @@
 				</exclusion>
 			  </exclusions>
 		</dependency>
-		
-		<!-- https://mvnrepository.com/artifact/org.umlg/sqlg-postgres-dialect
-		<dependency>
-			<groupId>org.umlg</groupId>
-			<artifactId>sqlg-postgres-dialect</artifactId>
-			<version>2.1.4</version>
-		</dependency> -->
 	</dependencies>
 
 	<build>
