--- a/booking_service_01/pom.xml
+++ b/booking_service_01/pom.xml
@@ -57,11 +57,11 @@
 		</dependency>
 
 		<!-- h2 -->
-		<!-- <dependency>
+		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
-		  </dependency> -->
+		  </dependency>
 
 		<!-- postgreSQL -->
 		<dependency>
@@ -69,6 +69,13 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<!-- jackson-->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.12.2</version>
+		</dependency>
+		
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
