--- a/booking_service_01/pom.xml
+++ b/booking_service_01/pom.xml
@@ -42,6 +42,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
+		<!-- passwordEncoder -->
+		<!-- <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<version>2.4.5</version>
+		 </dependency> -->
 		
 		<!-- mapstruct -->
 		<dependency>
