--- a/booking_service_01/src/main/resources/application.properties
+++ b/booking_service_01/src/main/resources/application.properties
@@ -1,4 +1,10 @@
 server.port = 8000
+server.servlet.session.timeout=43200m
+server.servlet.session.cookie.max-age= 43200m
+server.servlet.session.cookie.name=SID
+server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.secure=false
+
 
 # JPA Settings
 spring.jpa.hibernate.ddl-auto=update
@@ -11,3 +17,4 @@ spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/postgres
 spring.datasource.username=test_user
 spring.datasource.password=test_pw
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
