--- a/booking_service_01/pom.xml
+++ b/booking_service_01/pom.xml
@@ -38,10 +38,23 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		  </dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+
+		  <dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>3.0.0</version>
 		</dependency>
+		<dependency>
+		   <groupId>io.springfox</groupId>
+		   <artifactId>springfox-swagger-ui</artifactId>
+		   <version>3.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-boot-starter</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+		
 		<!-- passwordEncoder -->
 		<!-- <dependency>
 			<groupId>org.springframework.boot</groupId>
