--- a/booking_service_01/.gitignore
+++ b/booking_service_01/.gitignore
@@ -33,6 +33,7 @@ build/
 .vscode/
 
 ### Test Code ###
+src/main/resources/
 src/main/resources/httpTest/
 src/main/resources/application.properties
 
